# argos3-kheperaiv-gripper-module

./: .gitignore  README.md  Run_Argos_On_Robot.txt  argos_error  robot-init  update-test-code.sh  vicon-argos-setup
build_robot/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build_robot/plugins/: Makefile  cmake_install.cmake
build_robot/plugins/robots/: Makefile  cmake_install.cmake
build_robot/plugins/robots/kheperaiv/: Makefile  cmake_install.cmake
build_robot/testing/: Makefile  cmake_install.cmake
build_simulator/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build_simulator/plugins/: Makefile  cmake_install.cmake
build_simulator/plugins/robots/: Makefile  cmake_install.cmake
build_simulator/plugins/robots/kheperaiv/: Makefile  (+1 more)
build_simulator/testing/: Makefile  cmake_install.cmake
build_simulator/testing/kheperaiv_diffusion_autogen/: moc_predefs.h
src/: CMakeLists.txt
src/testing/: CMakeLists.txt  drive_test.bdb  drive_test.bo  drive_test.bzz  gripper_test.bdb  gripper_test.bo  gripper_test.bzz  gripper_test_0.argos  gripper_test_0.bdb  gripper_test_0.bo  gripper_test_0.bzz  gripper_test_1_cylinder_real.argos  grippy_grip_me.bdb  grippy_grip_me.bo  grippy_grip_me.bzz  kheperaiv_gripper_test.cpp  kheperaiv_gripper_test.h  kiv_gripping.argos  kiv_gripping_base.argos  kiv_gripping_real.argos  network_test.argos  pull_grip_test.bdb  pull_grip_test.bo  pull_grip_test.bzz  test.bdb  test.bo  testexperimentgripper.argos  testexperimentgripper_vicon.argos
(+52 files in other folders)
